--- a/public/index.html
+++ b/public/index.html
@@ -24,8 +24,7 @@
     -->
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" />
-
-    <title>Drinks</title>
+    <title>Drinks maybe Drinker</title>
   </head>
 
   <body>
